--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "0.18.0",
     "bootstrap": "4.1.1",
+    "eslint": "^6.8.0",
     "font-awesome": "4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,12 +26,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
