--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "bootstrap": "^4.1.1",
     "eslint": "^6.8.0",
     "font-awesome": "4.7.0",
+    "jquery": "^3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-router": "4.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
