--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-router": "4.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-text-mask": "^5.4.3",
+    "text-mask-addons": "^3.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
