--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "font-awesome": "4.7.0",
     "jquery": "^3.6.0",
     "react": "^18.2.0",
+    "react-date-picker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
     "react-router": "4.2.0",
