--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^6.8.0",
     "font-awesome": "4.7.0",
     "jquery": "^3.6.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-date-picker": "^8.4.0",
     "react-dom": "^18.2.0",
