--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "react-router": "4.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scrollbars": "^0.0.5",
+    "react-scrollbars-custom": "^4.1.0",
+    "react-table-scrollbar": "^0.1.11",
     "react-text-mask": "^5.4.3",
     "text-mask-addons": "^3.8.0",
     "web-vitals": "^2.1.4"
