--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "pdfmake": "^0.1.67",
     "axios": "0.18.0",
     "bootstrap": "^4.1.1",
     "eslint": "^6.8.0",
