--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "pdfmake": "^0.1.67",
     "axios": "0.18.0",
     "bootstrap": "^4.1.1",
     "eslint": "^6.8.0",
+    "firebase": "^9.9.2",
     "font-awesome": "4.7.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.4",
+    "pdfmake": "^0.1.67",
     "react": "^18.2.0",
     "react-date-picker": "^8.4.0",
     "react-dom": "^18.2.0",
